completed details pages

--- a/app/views/actor_templates/list.html.erb
+++ b/app/views/actor_templates/list.html.erb
@@ -46,7 +46,7 @@
     </td>
 
     <td>
-      <a href="/directors/<%= an_actor.id %>">
+      <a href="/actors/<%= an_actor.id %>">
         Show details
       </a>
     </td>
