--- a/app/views/actor_templates/details.html.erb
+++ b/app/views/actor_templates/details.html.erb
@@ -1,9 +1,9 @@
 
 <h1>
-  Director #<%= @the_director.id %> details
+  Actor #<%= @the_actor.id %> details
 </h1>
 
-<a href="/directors">
+<a href="/actors">
   Go back
 </a>
 
@@ -14,42 +14,42 @@
     Name
   </dt>
   <dd>
-    <%= @the_director.name %> 
+    <%= @the_actor.name %> 
   </dd>
 
   <dt>
     Dob
   </dt>
   <dd>
-    <%= @the_director.dob %> 
+    <%= @the_actor.dob %> 
   </dd>
 
   <dt>
     Bio
   </dt>
   <dd>
-    <%= @the_director.bio %> 
+    <%= @the_actor.bio %> 
   </dd>
 
   <dt>
     Image
   </dt>
   <dd>
-    <img src="<%= @the_director.image %>" style="width:250px;">
+    <img src="<%= @the_actor.image %>" style="width:250px;">
   </dd>
 
   <dt>
     Created at
   </dt>
   <dd>
-    <%= @the_director.created_at %> 
+    <%= @the_actor.created_at %> 
   </dd>
 
   <dt>
     Updated at
   </dt>
   <dd>
-    <%= @the_director.updated_at %> 
+    <%= @the_actor.updated_at %> 
   </dd>
 </dl>
 
@@ -60,14 +60,7 @@
 
 <table border="1">
   <tr>
-    <th>
-      ID
-    </th>
-
-    <th>
-      Image
-    </th>
-
+   
     <th>
       Title
     </th>
@@ -81,22 +74,20 @@
     </th>
 
     <th>
+      Character Name
+    </th>
+
+    <th>
     </th>
   </tr>
 
 
   
-<% Movie.where({ :director_id => @the_director.id }).each do |a_movie| %>
+<% Character.where({ :actor_id => @the_actor.id }).each do |a_character| %>
+
+<% a_movie = Movie.where({ :id => a_character.movie_id}).at(0) %>
 
   <tr>
-    <td>
-      <%= a_movie.id %>
-    </td>
-
-    <td>
-      <img src="<%= a_movie.image %>" style="width:250px;">
-    </td>
-
     <td>
       <%= a_movie.title %>
     </td>
@@ -106,7 +97,11 @@
     </td>
 
     <td>
-      <%= a_movie.title %>
+      <%= Director.where({ :id => a_movie.director_id }).at(0).name  %>
+    </td>
+
+    <td>
+      <%= a_character.name %>
     </td>
 
     <td>
